# qt5_study

./: README.md
hello/: CMakeLists.txt  Makefile  build.sh  hello.pro
hello/src/: main.cpp
